--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 5000
-CONNECTION_URL = mongodb+srv://sk123:ksaif123%21%40%23@cluster0.bsvyr.mongodb.net/testDB?retryWrites=true&w=majority
+CONNECTION_URL = "mongodb+srv://sk123:ksaif123%21%40%23@cluster0.bsvyr.mongodb.net/testDB?retryWrites=true&w=majority"
+LOCAL_CONNECTION = "mongodb://localhost:27017/admin"
