--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/styles": "^4.11.5",
+    "@jansedlon/material-ui-chip-input": "^1.3.14",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@mui/styles": "^5.9.2",
@@ -19,7 +16,6 @@
     "@testing-library/user-event": "^14.2.1",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
-    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.28",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
